--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,9 @@ author :
   github : tcitry
   twitter : tcitry
   #feedburner : feedname
+  
+gems:
+  - jekyll-sitemap
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
