--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,10 @@ author :
 
 gems:
   - jekyll-sitemap
+  - jekyll-paginate
 
+paginate: 5
+paginate_path: "blog/page:num"
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
