--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title:              "殷东亮的博客"
 description:        "殷东亮的博客"
 # google_verify:      epFgX0s_0RM3CdjwFcsewfXzPov2g8s9ZBOLyaIUH-o
-google_analytics:   UA-50554094-4 # Put your Google Analytics code
+# google_analytics:   UA-50554094-4 # Put your Google Analytics code
 
 # Author Info
 author_name:        "殷东亮"
