--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ permalink:          /:title # Post permalink
 timezone:           Asia/Shanghai # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 # Site Build
-highlighter:        pygments
+highlighter:        rouge
 markdown:           rdiscount
 # markdown:           redcarpet
 # redcarpet:
