change markdown engine to kramdown

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ timezone:           Asia/Shanghai # https://en.wikipedia.org/wiki/List_of_tz_dat
 
 # Site Build
 highlighter:        rouge
-markdown:           rdiscount
+markdown:           kramdown
 # markdown:           redcarpet
 # redcarpet:
 #    extensions:     ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data", "highlight", "footnotes"]
