--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -2,22 +2,22 @@
 
 # Color for top bar, links, etc
 # highlight_color: '#db3445'
-highlight_color: '#ff0000'
+highlight_color: '#6699CC'
 
 # Profile links on the left sidebar, leave blank to ignore
 social:
   github: tcitry
   #bitbucket: tcitry
   hacker_news: tcitry
-  stackexchange: 2676742
-  stackoverflow: 2676742
+  # stackexchange: 2676742
+  # stackoverflow: 2676742
   twitter: tcitry
   #facebook: zuck
   #tumblr: animalygifs
   # linkedin: tcitry
   gplus: 101958662077560399708
   medium: tcitry
-  gravatar: 7299cfb7415c83033f2a9aa9f635b2c6
+  gravatar: 现主要做Python后端
   #flickr: johndoe
 
 # "Hi, I'm _______"
