--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -17,7 +17,7 @@ social:
   # linkedin: tcitry
   gplus: 101958662077560399708
   medium: tcitry
-  gravatar: 现主要做Python后端
+  gravatar: 
   #flickr: johndoe
 
 # "Hi, I'm _______"
