--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: Dongliang Yin's Blog | 殷东亮的博客
 simple_search: https://www.google.com/search
 lsi: false
 disqus: yindongliang
-permalink: /blog/:year/:month/:day/:title/
+permalink: /:year/:month/:day/:title/
 category_dir: blog/categories
 paginate: 100
 paginate_path: "page:num"
