--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -1,8 +1,8 @@
 # Theme customization - please change from the defaults!
 
 # Color for top bar, links, etc
-highlight_color: '#db3445'
-# highlight_color: '#6699CC'
+# highlight_color: '#db3445'
+highlight_color: '#205081'
 
 # Profile links on the left sidebar, leave blank to ignore
 social:
