--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -9,6 +9,8 @@ social:
   github: tcitry
   #bitbucket: tcitry
   hacker_news: tcitry
+  weibo: tcitry
+  douban: yindongliang
   # stackexchange: 2676742
   # stackoverflow: 2676742
   twitter: tcitry
