--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -8,15 +8,15 @@ highlight_color: '#205081'
 social:
   github: tcitry
   #bitbucket: tcitry
-  hacker_news: tcitry
+  # hacker_news: tcitry
   # stackexchange: 2676742
   # stackoverflow: 2676742
   twitter: tcitry
   #facebook: zuck
   #tumblr: animalygifs
   # linkedin: tcitry
-  gplus: 101958662077560399708
-  medium: tcitry
+  # gplus: 101958662077560399708
+  # medium: tcitry
   gravatar: 
   #flickr: johndoe
 
