--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ twitter_username:   tcitry
 
 # Site Settings
 baseurl:            "" # Base URL must end WITHOUT a slash, default: ""
-permalink:          /:year/:month/:title # Post permalink
+permalink:          /:title # Post permalink
 timezone:           Asia/Shanghai # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 # Site Build
