--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site Info
-title:              "殷东亮的博客"
-description:        "殷东亮的博客"
+title:              "大连工业大学开发者博客"
+description:        "大连工业大学开发者博客"
 # google_verify:      epFgX0s_0RM3CdjwFcsewfXzPov2g8s9ZBOLyaIUH-o
-google_analytics:   UA-50554094-4 # Put your Google Analytics code
+# google_analytics:   UA-50554094-4 # Put your Google Analytics code
 
 # Author Info
-author_name:        "殷东亮"
+author_name:        "大连工业大学开发者"
 author_email:       tcitry@gmail.com
 author_gravatar:    4d5229b40a02e193dd556a6f62a056b7 # Gravatar md5 hash
 twitter_username:   tcitry
