add google analysis

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title:              "大连工业大学开发者博客"
 description:        "大连工业大学开发者博客"
 # google_verify:      epFgX0s_0RM3CdjwFcsewfXzPov2g8s9ZBOLyaIUH-o
-# google_analytics:   UA-50554094-4 # Put your Google Analytics code
+google_analytics:   UA-50554094-5 # Put your Google Analytics code
 
 # Author Info
 author_name:        "大连工业大学开发者"
