change atom url&email address

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ google_analytics:   UA-50554094-5 # Put your Google Analytics code
 
 # Author Info
 author_name:        "大连工业大学开发者"
-author_email:       tcitry@gmail.com
+author_email:       github@dlpu.party
 author_gravatar:    4d5229b40a02e193dd556a6f62a056b7 # Gravatar md5 hash
 twitter_username:   tcitry
 
